# ooctye_analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.claude/: settings.local.json
.napari-hub/: DESCRIPTION.md  config.yml
docs/superpowers/plans/: 2026-05-11-three-regions-plan.md  2026-06-05-auto-perinuclear-region.md  2026-06-05-b-intensity-histograms-and-csv-export.md
docs/superpowers/specs/: 2026-05-11-three-regions-design.md  2026-06-05-auto-perinuclear-region-design.md  2026-06-05-b-intensity-histograms-and-csv-export-design.md  2026-06-05-channel-c-overlap-design.md  2026-06-05-non-overlap-mask-export-design.md  2026-06-05-region-spot-csv-export-design.md
src/napari_ooctyle_analysis/: _analysis.py  _fitting.py  _regions.py  _segmentation.py  _widget.py  _workers.py  napari.yaml
src/napari_ooctyle_analysis/_tests/: test_regions.py  test_widget.py
